index.css
@import url('./common.css');

#hero {
    display: flex;
    flex-direction: column;
    padding-bottom: 30px;
    position: relative;
    z-index: 1;
    padding-top: 64px;
    @media screen and (max-width: 1200px) {
        padding-top: 20px;
    };
}

.header {
    justify-content: space-between;
    @media screen and (max-width: 1200px) {
        height: 40px;
    }
}

.header-logo {
    gap: 8px;
}

.header-logo__image {
    width: 36px;
    height: 36px;
}

.header-logo__name {
    font-size: var(--h3-desk);
    font-weight: var(--bold);
}

.header-action {
    border-radius: 14px;
    border: 1px solid var(--dark);
    padding: 20px 35px;
    transition: all ease .5s;
    @media screen and (max-width: 1200px) {
        display: none; 
    }
}

.header-action:hover {
    background-color: var(--dark);
    color: var(--white);
}

.header-navigation {
    @media screen and (max-width: 1200px) {
       display: none; 
    }
}

.header-navigation__link {
    font-size: var(--h4-desk);
    margin-right: 40px;
    position: relative;
    @media screen and (max-width: 1200px) {
        margin-right: 0;
    }
}


.header-navigation__link::after {
    content: '';
    position: absolute;
    left: 0;
    top: 24px;
    height: 2px;
    background-color: var(--dark);
    width: 100%;
    transition: all ease .5s;
    transform: scaleX(0);
    transform-origin: left;
}

.header-navigation__link:hover::after {
    transform: scaleX(1);
}

.mobile-navigation {
    @media screen and (min-width: 1200px) {
        display: none;
    };
    position: absolute;
    right: 0;
    top: 60px;
    transition: all ease .5s;
    width: 100vw;
    background-color: var(--white);
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 20px;
    padding: 0 40px;
    overflow: hidden;
    z-index: 3;
}

.mobile-navigation>.action-button {
    width: 100%;
    text-align: center;
}

.mobile-navigation__overlay {
    position: absolute;
    top: 80px;
    background-color: transparent;
    opacity: .5;
    right: 0;
    transition: all ease .5s;
    height: 100vh;
    width: 100vw;
    z-index: 2;
}

.mobile-navigation__overlay--active {
    background-color: var(--gray-tertiary);
}

.mobile-navigation--inactive {
    height: 0;
}

.mobile-navigation--active {
    padding: 60px 40px 20px;
}

.header-burger {
    @media screen and (min-width: 1200px) {
        display: none;
    };
    width: 30px;
    height: 20px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.header-burger__line {
    width: 100%;
    height: 3px;
    background-color: var(--dark);
    transition: all ease .5s;
}

.header-burger__line--top {
    transform-origin: left;
    transform: rotate(35deg);
}

.header-burger__line--bottom {
    transform-origin: left;
    transform: rotate(-35deg);
}

.header-burger__line--middle {
    opacity: 0;
    margin-left: 50px;
}

.intro {
    padding-top: 64px;
    justify-content: space-between;
    @media screen and (max-width: 1200px) {
        flex-direction: column-reverse;
        text-align: center;
        flex-grow: 1;
    }
}

.intro-content {
    max-width: 530px;
    @media screen and (max-width: 1200px) {
        max-width: inherit;
        display: flex;
        align-items: center;
        flex-direction: column;
    }
}

.intro-content__image {
    margin: auto;
    @media screen and (max-width: 1200px) {
        width: 700px;
    }
    @media screen and (max-width: 768px) {
        width: 500px;
    }
    @media screen and (max-width: 576px) {
        width: 300px;
    }
}

.intro-content__header {
    font-size: var(--h1-desk);
    line-height: calc(var(--h1-desk) * 1.5);
    @media screen and (max-width: 768px) {
        font-size: var(--h1-mob);
        line-height: calc(var(--h1-mob) * 1.5);
    }
}

.intro-content__info {
    font-size: var(--h4-desk);
    line-height: calc(var(--h4-desk) * 1.5);
    margin: 24px 0;
    font-weight: var(--thin);
}

#partners {
    margin-top: 120px;
}

.section-header {
    margin-bottom: 40px;
    gap: 24px;
    @media screen and (max-width: 992px) {
        flex-direction: column;
        text-align: center;
    }
}

.section-header__title {
    background-color: var(--primary);
    border-radius: 7px;
    padding: 7px 10px;
    width: fit-content;
}

.partner-list {
    justify-content: center;
    flex-wrap: wrap;
    gap: 2%;
}

.section-header__info {
    max-width: 580px;
}

.service-list {
    flex-wrap: wrap;
    justify-content: space-between;
    width: 100%;
    gap: 40px;
}

.service-item {
    border: 1px solid var(--dark);
    border-radius: 45px;
    padding: 50px;
    justify-content: space-between;
    transition: all ease .5s;
    transform-origin: bottom;
    height: 310px;
    flex-grow: 1;
}

.service-item>img {
    @media screen and (max-width: 576px) {
        display: none;
    }
}

.service-item:hover {
    transform: translateY(-5px);
    box-shadow: 0 5px 0 var(--dark);
}

.service-item__content {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 100%;
}

.arrow-link {
    width: 40px;
    height: 40px;
    border-radius: 20px;
    justify-content: center;
    transform: rotate(-24deg);
}

.arrow-link__icon {
    width: 20px;
    height: 20px;
}

.arrow-link__text {
    font-size: var(--h4-desk);
    margin-left: 10px;
}

#action {
    border-radius: 45px;
    padding: 60px;
    position: relative;
    margin: 0 100px 120px;
    @media screen and (max-width: 1200px) {
        text-align: center;
        display: flex;
        flex-direction: column;
        align-items: center;
        margin: 0 40px 120px;
    }
    @media screen and (max-width: 992px) {
       margin: 0 20px 120px;
    }
}

.action-content__title {
    font-size: var(--h3-desk);
}
/* ... */

